--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a32nx",
   "version": "0.10.0",
-  "edition": "development",
+  "edition": "stable",
   "scripts": {
     "====== A320 =================": "==========================================",
 
