--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -101,6 +101,7 @@ jobs:
           if [ "$(ls -1 ./${{ env.BUILD_DIR_NAME }} | wc -l)" -eq 1 ]; then
             echo "Standalone Download is is not split"
           else
+            ls -1 ./${{ env.BUILD_DIR_NAME }}| wc -l
             echo "Error: The number of standalone download parts is not 1. Adjust all download references and workflows for the new number of parts!" >&2
             exit 1
           fi
@@ -211,10 +212,11 @@ jobs:
           df -h
       - name: Count Standalone Download files
         run: |
-          if [ "$(ls -1 ./${{ env.BUILD_DIR_NAME }} | wc -l)" -eq 2 ]; then
-            echo "Standalone Download is split in 2 parts"
+          if [ "$(ls -1 ./${{ env.BUILD_DIR_NAME }} | wc -l)" -eq 3 ]; then
+            echo "Standalone Download is split in 3 parts"
           else
-            echo "Error: The number of standalone download parts is not 2. Adjust all download references and workflows for the new number of parts!" >&2
+            ls -1 ./${{ env.BUILD_DIR_NAME }}| wc -l
+            echo "Error: The number of standalone download parts is not 3. Adjust all download references and workflows for the new number of parts!" >&2
             exit 1
           fi
       - name: Upload release assets
@@ -326,6 +328,7 @@ jobs:
           if [ "$(ls -1 ./${{ env.BUILD_DIR_NAME }} | wc -l)" -eq 2 ]; then
             echo "Standalone Download is split in 2 parts"
           else
+            ls -1 ./${{ env.BUILD_DIR_NAME }}| wc -l
             echo "Error: The number of standalone download parts is not 2. Adjust all download references and workflows for the new number of parts!" >&2
             exit 1
           fi
